--- a/validator-ejector/Dockerfile
+++ b/validator-ejector/Dockerfile
@@ -1,8 +1,9 @@
 ARG VALIDATOR_EJECTOR_VERSION
+ARG NETWORK
+
 FROM lidofinance/validator-ejector:${VALIDATOR_EJECTOR_VERSION}
 
-ENV MESSAGES_LOCATION="/exitmessages" \
-    RUN_METRICS=true \
+ENV RUN_METRICS=true \
     HTTP_PORT=8989 \
     DISABLE_SECURITY_DONT_USE_IN_PRODUCTION=false \
-    NETWORK=holesky
+    NETWORK=${NETWORK}
