--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: validator-ejector
       args:
         EJECTOR_VERSION: 1.5.0
+        NETWORK: holesky
+        CHARON_TO_EXIT_NUMBER: 1
     environment:
       VE_OPERATOR_ID: ""
     restart: on-failure
@@ -15,10 +17,11 @@ services:
       context: lido-dvt-exit
       args:
         DV_EXIT_VERSION: e8bee1f
-        LIDO_DV_EXIT_LOG_LEVEL: info
-        LIDO_DV_EXIT_VALIDATOR_QUERY_CHUNK_SIZE: 5
+        NETWORK: holesky
     environment:
-
+      LIDO_DV_EXIT_LOG_LEVEL: info
+      LIDO_DV_EXIT_VALIDATOR_QUERY_CHUNK_SIZE: 5
+      CHARON_TO_EXIT_NUMBER: 1
     restart: on-failure
     volumes:
       - validator-ejector:/exitmessages
