--- a/validator-ejector/Dockerfile
+++ b/validator-ejector/Dockerfile
@@ -7,3 +7,7 @@ ENV RUN_METRICS=true \
     HTTP_PORT=8989 \
     DISABLE_SECURITY_DONT_USE_IN_PRODUCTION=false \
     NETWORK=${NETWORK}
+
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
