--- a/validator-ejector/Dockerfile
+++ b/validator-ejector/Dockerfile
@@ -2,6 +2,7 @@ ARG VALIDATOR_EJECTOR_VERSION
 ARG NETWORK
 
 FROM lidofinance/validator-ejector:${VALIDATOR_EJECTOR_VERSION}
+ARG NETWORK
 
 ENV RUN_METRICS=true \
     HTTP_PORT=8989 \
