--- a/validator-ejector/Dockerfile
+++ b/validator-ejector/Dockerfile
@@ -4,6 +4,10 @@ ARG NETWORK
 FROM lidofinance/validator-ejector:${VALIDATOR_EJECTOR_VERSION}
 ARG NETWORK
 
+USER root
+
+RUN apk update && apk add inotify-tools
+
 ENV RUN_METRICS=true \
     HTTP_PORT=8989 \
     DISABLE_SECURITY_DONT_USE_IN_PRODUCTION=false \
