--- a/lido-dv-exit/Dockerfile
+++ b/lido-dv-exit/Dockerfile
@@ -2,6 +2,7 @@ ARG LIDO_DV_EXIT_VERSION
 ARG NETWORK
 
 FROM obolnetwork/lido-dv-exit:${LIDO_DV_EXIT_VERSION}
+ARG NETWORK
 
 ENV NETWORK=${NETWORK}
 
