--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,9 +1,18 @@
 {
   "name": "obol-lido-ejector-holesky.dnp.dappnode.eth",
   "version": "0.1.0",
-  "upstreamArg": ["DV_EXIT_VERSION", "EJECTOR_VERSION"],
-  "upstreamVersion": ["v0.1.0", "1.5.0"],
-  "upstreamRepo": ["ObolNetwork/lido-dv-exit", "lidofinance/validator-ejector"],
+  "upstream": [
+    {
+      "repo": "ObolNetwork/lido-dv-exit",
+      "version": "v0.1.0",
+      "arg": "DV_EXIT_VERSION"
+    },
+    {
+      "repo": "lidofinance/validator-ejector",
+      "version": "1.5.0",
+      "arg": "EJECTOR_VERSION"
+    }
+  ],
   "shortDescription": "Lido validator ejector for Holesky",
   "description": "Lido validator ejector for Holesky",
   "type": "service",
